--- a/_config.yml
+++ b/_config.yml
@@ -13,36 +13,38 @@ baseurl: ""
 lang: en
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: America/Toronto
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: "IT|Security 🤖🛡️" # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Exploring Tech, Sharing Insights, Building Together # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Antonio Cheltenham's personal tech playground, where innovation meets collaboration. 
+  Dive into experiments, explore notes on coding and security, and join open dialogues on cutting-edge technology. 
+  Whether you're a fellow tech enthusiast or curious explorer, discover insights, tools, and inspiration to fuel your tech journey.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: ""
 
 github:
-  username: github_username # change to your github username
+  username: acheltenham # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: acheltenham # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Antonio Cheltenham
+  email: antonio@cheltenham.dev # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://twitter.com/acheltenham # change to your twitter homepage
+    - https://github.com/acheltenham # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -76,7 +78,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: /assets/img/avatar_cheltenham.svg
 
 # boolean type, the global switch for TOC in posts.
 toc: true
@@ -104,10 +106,10 @@ comments:
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
   self_host:
-    enabled: # boolean, keep empty means false
+    enabled: true # boolean, keep empty means false
     # specify the Jekyll environment, empty means both
     # only works if `assets.self_host.enabled` is 'true'
-    env: # [development|production]
+    env: development # [development|production]
 
 pwa:
   enabled: true # the option for PWA feature
