Intro to Okta Policies

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ timezone: America/Toronto
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: "IT|Security 🤖🛡️" # the main title
+title: "IAM SAM 🛡️" # the main title
 
 tagline: Exploring Tech, Sharing Insights, Building Together # it will display as the sub-title
 
