Add some analytics and verification

--- a/_config.yml
+++ b/_config.yml
@@ -49,13 +49,13 @@ social:
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-google_site_verification: # fill in to your verification string
+google_site_verification: google-site-verification=Fnz3dvhZzaglMUGBAEDcznp6vCbEe4LqcwRmmuyToaY # fill in to your verification string
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
 
 google_analytics:
-  id: # fill in your Google Analytics ID
+  id: G-DVLW0MNX53 # fill in your Google Analytics ID
 
 # Prefer color scheme setting.
 #
